deps/v8/test/message/modules-undefined-export2.out
*%(basename)s:7: SyntaxError: Export 'x' is not defined in module
export {x as y};
        ^^^^^^
SyntaxError: Export 'x' is not defined in module

